--- a/Proyecto1/BancoPresentacion/src/main/java/GUI/frmCrearUsuario.form
+++ b/Proyecto1/BancoPresentacion/src/main/java/GUI/frmCrearUsuario.form
@@ -98,6 +98,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="textFechaNacimiento">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="24" style="1"/>
         </Property>
